--- a/services/geo/Cargo.toml
+++ b/services/geo/Cargo.toml
@@ -10,11 +10,9 @@ path = "src/geo.rs"
 
 
 [dependencies]
-tonic = "0.9"
-prost = "0.11"
-tokio = { version = "1.29", features = ["full"] }
-opentelemetry = { version = "*", features = ["rt-tokio"] }
-opentelemetry-jaeger = { version = "*", features = ["rt-tokio"] }
+commons = { path = "../../commons" }
+tonic = { workspace = true }
+prost = { workspace = true }
 
 
 [build-dependencies]
