--- a/services/profile/Cargo.toml
+++ b/services/profile/Cargo.toml
@@ -10,18 +10,9 @@ path = "src/profile.rs"
 
 
 [dependencies]
-tonic = "0.9"
-prost = "0.11"
-tokio = { version = "1.29", features = ["full"] }
-mongodb = { version = "2.6.0" }
-futures = "0.3"
-# microservice dependencies
-config = { path = "../../config" }
-# tracing
-opentelemetry = { version = "*", features = ["rt-tokio"] }
-opentelemetry-jaeger = { version = "*", features = ["rt-tokio"] }
-colored = "2"
-
+commons = { path = "../../commons" }
+tonic = { workspace = true }
+prost = { workspace = true }
 
 [build-dependencies]
 tonic-build = "0.9"
