--- a/services/rate/Cargo.toml
+++ b/services/rate/Cargo.toml
@@ -8,13 +8,10 @@ edition = "2021"
 name = "rate-service"
 path = "src/rate.rs"
 
-
 [dependencies]
-tonic = "0.9"
-prost = "0.11"
-tokio = { version = "1.29", features = ["full"] }
-opentelemetry = { version = "*", features = ["rt-tokio"] }
-opentelemetry-jaeger = { version = "*", features = ["rt-tokio"] }
+commons = { path = "../../commons" }
+tonic = { workspace = true }
+prost = { workspace = true }
 
 
 [build-dependencies]
