--- a/services/research/Cargo.toml
+++ b/services/research/Cargo.toml
@@ -10,15 +10,11 @@ path = "src/research.rs"
 
 
 [dependencies]
-tonic = "0.9"
-prost = "0.11"
-tokio = { version = "1.29", features = ["full"] }
-# microservice dependencies
-config = { path = "../../config" }
+commons = { path = "../../commons" }
 geo = { path = "../geo" }
+tonic = { workspace = true }
+prost = { workspace = true }
 
-opentelemetry = { version = "*", features = ["rt-tokio"] }
-opentelemetry-jaeger = { version = "*", features = ["rt-tokio"] }
 
 [build-dependencies]
 tonic-build = "0.9"
