--- a/services/reservation/Cargo.toml
+++ b/services/reservation/Cargo.toml
@@ -10,14 +10,10 @@ path = "src/reservation.rs"
 
 
 [dependencies]
-tonic = "0.9"
-prost = "0.11"
-tokio = { version = "1.29", features = ["full"] }
-opentelemetry = { version = "*", features = ["rt-tokio"] }
-opentelemetry-jaeger = { version = "*", features = ["rt-tokio"] }
-config = { path = "../../config" }
+commons = { path = "../../commons" }
 user = { path = "../user" }
-
+tonic = { workspace = true }
+prost = { workspace = true }
 
 [build-dependencies]
 tonic-build = "0.9"
