--- a/test_worker/Cargo.toml
+++ b/test_worker/Cargo.toml
@@ -6,11 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-config = { path = "../config" }
+commons = { path = "../commons" }
 user = { path = "../services/user" }
-profile = { path = "../services/profile" }
-
+recommendation = { path = "../services/recommendation" }
 rand = "0.8.5"
-tokio = { version = "1.29", features = ["full"] }
-mongodb = "2.6.0"
-futures = "0.3"
+tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
