--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["services/*", "commons", "test_worker"]
+members = ["services/*", "commons", "monolithic-service", "test-worker"]
 exclude = ["services/reservation"]
 resolver = "2"
 
@@ -11,8 +11,8 @@ mongodb = { version = "2.6" }
 futures = { version = "0.3" }
 colored = { version = "2.0" }
 
-opentelemetry = { version = "*", features = ["rt-tokio"] }
-opentelemetry-jaeger = { version = "*", features = ["rt-tokio"] }
+# opentelemetry = { version = "*", features = ["rt-tokio"] }
+# opentelemetry-jaeger = { version = "*", features = ["rt-tokio"] }
 
 tonic-build = { version = "0.9" }
 
