--- a/services/reservation/Cargo.toml
+++ b/services/reservation/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2021"
 name = "reservation-service"
 path = "src/reservation.rs"
 
+[lib]
+path = "src/lib.rs"
+
 
 [dependencies]
 commons = { path = "../../commons" }
