--- a/monolithic-service/Cargo.toml
+++ b/monolithic-service/Cargo.toml
@@ -3,4 +3,10 @@ name = "monolithic-service"
 version = "0.1.0"
 edition = "2021"
 
+
+[lib]
+path = "src/lib.rs"
+
+
 [dependencies]
+commons = { path = "../commons" }
