--- a/services/geo/Cargo.toml
+++ b/services/geo/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2021"
 name = "geo-service"
 path = "src/geo.rs"
 
+[lib]
+path = "src/lib.rs"
+
 
 [dependencies]
 commons = { path = "../../commons" }
