--- a/services/recommendation/Cargo.toml
+++ b/services/recommendation/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2021"
 name = "recommendation-service"
 path = "src/recommendation.rs"
 
+[lib]
+path = "src/lib.rs"
+
 
 [dependencies]
 commons = { path = "../../commons" }
